2004-02-21  Duarte Loreto <happyguy_pt@hotmail.com>

	* configure.in: Added Portuguese (pt) to ALL_LINGUAS.

2004-02-19  Jorn Baayen  <jbaayen@gnome.org>

	* src/Album.cs:

	Add year information.
	
	* src/StringUtils.cs:

	Cleanup SelectionDataToString.

2004-02-18  Jorn Baayen  <jbaayen@gnome.org>

	* data/glade/InfoWindow.glade:
	* data/glade/Makefile.am:
	* data/glade/PlaylistWindow.glade:
	* data/muine.schemas.in:
	* src/InfoWindow.cs:
	* src/Makefile.am:
	* src/NotificationAreaIcon.cs:
	* src/PlaylistWindow.cs:

	Add a proof-of-concept information window.

2004-02-18  Jorn Baayen  <jbaayen@gnome.org>

	* src/PlaylistWindow.cs:

	Remove some unneccessary code.

2004-02-17  Jorn Baayen  <jbaayen@gnome.org>

	* TODO:
	* src/PlaylistWindow.cs:
	* src/Song.cs:
	* src/StringUtils.cs:

	Album cover DnD, and DnD'ing m3u files to the playlist will load
	them.

	This needs an uncommited fix to Gtk# before it will work without
	crashing, though ..

2004-02-17  Jorn Baayen  <jbaayen@gnome.org>

	* src/Album.cs:
	* src/Song.cs:
	* src/SongDatabase.cs:

	Stop leaking removed songs and albums.
	
	* src/PlaylistWindow.cs:

	Clean up window visibility code some more.

2004-02-16  Jorn Baayen  <jbaayen@gnome.org>

	* src/PlaylistWindow.cs:

	Make window visibility menu item in the tray icon work well when
	the window is iconified.

2004-02-15  Jorn Baayen  <jbaayen@gnome.org>

	* src/SongDatabase.cs:

	Add a missing null check.

2004-02-15  Jorn Baayen  <jbaayen@gnome.org>

	* src/SongDatabase.cs:

	Mark song as dead earlier.

2004-02-15  Jorn Baayen  <jbaayen@gnome.org>

	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:

	Tiny cleanup.

2004-02-15  Jorn Baayen  <jbaayen@gnome.org>

	* TODO:

	Added info about visualization.
	
	* src/About.cs:

	Added translation stuff.

2004-02-15  Jorn Baayen  <jbaayen@gnome.org>

	* libmuine/Makefile.am:
	* libmuine/gettext-utils.c: (init_intl):
	* libmuine/gettext-utils.h:
	* src/Muine.cs:
	
	Setup intl on startup.
